# 99_PaperReader

./: .env.example  .gitignore  INTEGRATION_COMPLETE.md  QUICKSTART.md  README.md  app.py  main.py  paper_qa_chain.py  paper_qa_pdf.py  pyproject.toml  test.py  test_notion.py
output/A_Planning_Method_for_Charging_Station_Based_on_Long-Term_Charging_Load_Forecasting_of_Electric_Vehi/: summary.md
